--- a/src/styles/blocks/hero.scss
+++ b/src/styles/blocks/hero.scss
@@ -1,12 +1,27 @@
 @import '../utils/vars';
 
 .hero {
-
+  @include content-padding-inline;
+  display: block;
   &__title {
     margin-top: 250px;
     font-weight: 700;
     font-size: 45px;
     text-align: center;
+
+    @include on-tablet {
+      margin-top: 64px;
+      width: 340px;
+      word-wrap: break-word;
+      text-align: left;
+    }
+
+    @include on-desktop {
+      margin-top: 143px;
+      font-size: 72px;
+      width: 470px;
+      line-height: 87px;
+    }
   }
 
   &__tickets {
@@ -15,9 +30,27 @@
     height: 50px;
     position: relative;
 
+    @include on-tablet {
+      width: 270px;
+      height: 70px;
+      margin-top: 38px;
+    }
+
+    @include on-desktop {
+      margin-top: 89px;
+      margin-left: 201px;
+    }
+
     &-title {
       font-size: 16px;
       padding: 18px 130px 18px 80px;
+
+      @include on-tablet {
+        padding: 27px 68px 27px 68px;
+      }
+
+      @include on-desktop {
+      }
     }
 
     &-arrow {
@@ -31,6 +64,11 @@
       background-size: 30px 30px;
       background-position: center;
       background-repeat: no-repeat;
+
+      @include on-tablet {
+        width: 70px;
+        height: 70px;
+      }
     }
   }
 }
