--- a/src/styles/blocks/main-info.scss
+++ b/src/styles/blocks/main-info.scss
@@ -2,13 +2,24 @@
   @include page-grid;
 
   grid-column: 1 / -1;
-  margin-top: 70px;
 
   &__title {
+    @include content-padding-inline;
     grid-column: 1 / -1;
     font-size: 36px;
     line-height: 36px;
     font-weight: 700;
     text-align: center;
+
+    @include on-tablet {
+      text-align: left;
+      margin-top: 88px;
+      font-size: 48px;
+    }
+
+    @include on-desktop {
+      margin-left: 55px;
+      margin-top: 200px;
+    }
   }
 }
