--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -1,75 +1,86 @@
 .current-events {
-    grid-column: 1 / -1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 60px;
+  @include content-padding-inline;
 
-    &-item {
-      &-img {
-        img {
-          height: 210px;
-          aspect-ratio: 16 / 9;
-          width: 100%;
-          object-fit: cover;
+  grid-column: 1 / -1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 60px;
 
-          @include on-tablet {
-            height: 520px;
-          }
-        }
-      }
-
-      &-data {
-        grid-column: 1 / -1;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-top: 20px;
+  &-item {
+    @include on-desktop {
+      display: flex;
+      gap: 130px;
+      align-items: center;
+    }
+    &-img {
+      img {
+        height: 210px;
+        aspect-ratio: 16 / 9;
+        width: 100%;
+        object-fit: cover;
 
         @include on-tablet {
-          grid-column: 1 / 2;
+          height: 520px;
         }
 
-        &-title {
-          font-size: 16px;
-          font-weight: 500;
-          color: #687480;
-        }
-
-        &-time {
-          font-size: 16px;
-          font-weight: 600;
-          color: #1a5a4c;
-        }
-      }
-
-      &-title {
-        font-family: Montserrat, sans-serif;
-        font-size: 28px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        margin-top: 10px;
-        div {
-          width: 10px;
-          height: 10px;
-          background-color: #f14a27;
-        }
-
-        @include on-tablet {
-          grid-column: 1 / 3;
-        }
-      }
-
-      &-text {
-        font-size: 16px;
-        line-height: 24px;
-        color: #4e4e4e;
-        margin-top: 10px;
-
-        @include on-tablet {
-          grid-column: 1 / 3;
+        @include on-desktop {
+          width: 670px;
         }
       }
     }
+
+    &-data {
+      grid-column: 1 / -1;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-top: 20px;
+
+      @include on-tablet {
+        grid-column: 1 / 2;
+      }
+
+      &-title {
+        font-size: 16px;
+        font-weight: 500;
+        color: #687480;
+      }
+
+      &-time {
+        font-size: 16px;
+        font-weight: 600;
+        color: #1a5a4c;
+      }
+    }
+
+    &-title {
+      font-family: Montserrat, sans-serif;
+      font-size: 28px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-top: 10px;
+      div {
+        width: 10px;
+        height: 10px;
+        background-color: #f14a27;
+      }
+
+      @include on-tablet {
+        grid-column: 1 / 3;
+      }
+    }
+
+    &-text {
+      font-size: 16px;
+      line-height: 24px;
+      color: #4e4e4e;
+      margin-top: 10px;
+
+      @include on-tablet {
+        grid-column: 1 / 3;
+      }
+    }
   }
+}
