--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -1,19 +1,46 @@
 .nav {
+  @include content-padding-inline;
+
   &__bar {
     margin-top: 9px;
+    gap: 88px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+
+    @include on-tablet {
+      gap: 385px;
+    }
+
+    img {
+      @include on-desktop {
+        margin-right: 555px;
+      }
+    }
   }
   &__img {
     position: absolute;
     left: 0;
     top: 0;
     z-index: -1;
-    background-image: url('../images/main_photo.png');
+    background-image: url('../images/bg.png');
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
     height: 300px;
     width: 100%;
+
+    @include on-tablet {
+      height: 384px;
+      width: 374px;
+      left: auto;
+      right: 0;
+    }
+
+    @include on-desktop {
+      height: 655px;
+      width: 725px;
+      left: auto;
+      right: 0;
+    }
   }
 }
