--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -7,8 +7,7 @@
     font-size: $font-size-base;
     color: $color-base;
     box-sizing: border-box;
-
-    @include content-padding-inline;
+    overflow-x: hidden;
   }
 
   &__menu {
