complited event section

--- a/src/styles/blocks/_modifiers.scss
+++ b/src/styles/blocks/_modifiers.scss
@@ -147,3 +147,41 @@
     height: 32px;
   }
 }
+
+.event__top-text--name {
+  color: $grey-text-687;
+  font-weight: 500;
+}
+
+.event__top-text--date {
+  color: $green-color;
+  font-weight: 700;
+}
+
+.event__info-top--margin {
+  margin-bottom: 15px;
+
+  @include phone {
+    margin-bottom: 5px;
+  }
+}
+
+
+.event__info-top--events-section-gap {
+  gap: 28px;
+
+  @include phone {
+    gap: 58px;
+  }
+}
+
+.event__title--before::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: -28px;
+  width: 15px;
+  height: 15px;
+  background-color: $orange-color;
+}
