--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -35,6 +35,18 @@
       min-height: 225px;
     }
   }
+
+  &__events-section {
+    margin-top: 200px;
+
+    @include small-tablet {
+      margin-top: 88px;
+    }
+
+    @include big-phone {
+      margin-top: 70px;
+    }
+  }
 }
 
 h1,h2,h3,h4,h5,h6 {
