--- a/src/styles/blocks/_title.scss
+++ b/src/styles/blocks/_title.scss
@@ -3,4 +3,9 @@
   font-weight: 700;
   line-height: 100%;
   font-family: Montserrat, Arial, Helvetica, sans-serif;
+
+  @include big-phone {
+    font-size: 36px;
+    text-align: center;
+  }
 }
