--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,5 +11,6 @@
 @import './blocks/logo-link';
 @import './blocks/info';
 @import './blocks/nav';
-@import './blocks/events';
+@import './blocks/events-section';
 @import './blocks/title';
+@import './blocks/event';
