--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -3,6 +3,9 @@ $white-color: #fff;
 $black-color: #0F0E08;
 $green-color: #1A5A4C;
 $grey-hover: #999;
+$grey-text-687: #687480;
+$grey-text-4E4: #4E4E4E;
+$orange-color: #F14A27;
 $height-burger: 12px;
 $width-burger: 18px;
 $height-burger-line: 2px;
