completed landscape section

--- a/src/styles/blocks/_modifiers.scss
+++ b/src/styles/blocks/_modifiers.scss
@@ -185,3 +185,20 @@
   height: 15px;
   background-color: $orange-color;
 }
+
+.event__info-top--landscape-settings {
+  max-width: 330px;
+  width: 100%;
+  justify-content: space-between;
+
+  @include phone {
+    box-sizing: border-box;
+    padding-inline: 21px;
+  }
+}
+
+.event__title--on-phone {
+  @include phone {
+    text-align: center;
+  }
+}
