--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -47,6 +47,18 @@
       margin-top: 70px;
     }
   }
+
+  &__gallery {
+    margin-top: 302px;
+
+    @include small-tablet {
+      margin-top: 208px;
+    }
+
+    @include big-phone {
+      margin-top: 183px;
+    }
+  }
 }
 
 h1,h2,h3,h4,h5,h6 {
