--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -19,6 +19,7 @@
     font-size: 36px;
     font-weight: 400;
     font-family: Montserrat, Arial, Helvetica, sans-serif;
+    line-height: 100%;
 
     position: relative;
     align-self: flex-start;
