--- a/src/styles/blocks/_events-section.scss
+++ b/src/styles/blocks/_events-section.scss
@@ -18,24 +18,24 @@
     align-items: center;
     gap: 44px;
 
-    margin-bottom: 104px;
+    padding-bottom: 104px;
 
     @include small-tablet {
       flex-direction: column;
       align-items: flex-start;
 
-      margin-bottom: 64px;
+      padding-bottom: 64px;
 
       &:last-child {
-        margin-bottom: 112px;
+        padding-bottom: 112px;
       }
     }
 
     @include big-phone {
-      margin-bottom: 60px;
+      padding-bottom: 60px;
 
       &:last-child {
-        margin-bottom: 60px;
+        padding-bottom: 60px;
       }
     }
 
