--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,6 +11,8 @@
 @import './blocks/logo-link';
 @import './blocks/info';
 @import './blocks/nav';
+@import './blocks/main';
 @import './blocks/events-section';
 @import './blocks/title';
 @import './blocks/event';
+@import './blocks/landscape';
