--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -19,3 +19,5 @@ $header-padding-phone: 27px;
 $nav-heigth: 96px;
 $nav-heigth-small: 72px;
 $separator-top: $nav-heigth-small + $header-padding-phone;
+$landscape-block-height: 204px;
+$landscape-block-bottom: $landscape-block-height / 2;
