have fixed mistakes

--- a/src/styles/blocks/buy-tickets.scss
+++ b/src/styles/blocks/buy-tickets.scss
@@ -11,6 +11,10 @@
     max-width: 270px;
   }
 
+  @include on-desktop {
+    @include hover(transform, scale(1.2));
+  }
+
   &__text {
     flex-grow: 1;
     text-align: center;
