--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -11,4 +11,12 @@
   @include on-tablet {
     row-gap: 20px;
   }
+
+  & a {
+    display: inline-block;
+    @include on-desktop {
+      transform-origin: left;
+      @include hover(transform, scale(1.2));
+    }
+  }
 }
