--- a/src/styles/blocks/events-button.scss
+++ b/src/styles/blocks/events-button.scss
@@ -8,6 +8,8 @@
   @include on-desktop {
     opacity: 1;
     pointer-events: all;
+
+    @include hover(transform, scale(1.2));
   }
 
   &::after {
