--- a/src/styles/blocks/icons.scss
+++ b/src/styles/blocks/icons.scss
@@ -6,6 +6,10 @@
   background-position: center;
   background-repeat: no-repeat;
 
+  @include on-desktop {
+    @include hover(transform, scale(1.2));
+  }
+
   &--menu {
     background-size: 18px 12px;
     background-image: url('../images/icons/icon-menu.svg');
