--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -17,6 +17,13 @@
     grid-template-columns: repeat(2, 1fr);
   }
 
+  &__item {
+    @include on-desktop {
+      transform-origin: left;
+      @include hover(transform, scale(1.2));
+    }
+  }
+
   &__link {
     font-size: 16px;
     font-weight: 500;
