--- a/src/styles/blocks/subscription-form.scss
+++ b/src/styles/blocks/subscription-form.scss
@@ -59,5 +59,9 @@
     background-position: center;
     background-repeat: no-repeat;
     background-image: url('../images/icons/icon-next.svg');
+
+    @include on-desktop {
+      @include hover(transform, scale(1.2));
+    }
   }
 }
