--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -1,14 +1,20 @@
 .logo {
   display: block;
 
-  font-size: 30px;
-  font-weight: 700;
-  line-height: 30px;
-  text-align: center;
-  font-family: Montserrat, sans-serif;
+  &__text {
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 30px;
+    text-align: center;
+    font-family: Montserrat, sans-serif;
 
-  @include on-tablet {
-    font-size: 36px;
-    line-height: 36px;
+    @include on-tablet {
+      font-size: 36px;
+      line-height: 36px;
+    }
+
+    @include on-desktop {
+      @include hover(transform, scale(1.2));
+    }
   }
 }
