--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -30,7 +30,9 @@
     left: 0;
     right: 0;
     z-index: 1;
+    height: 100vh;
     position: fixed;
+    background-color: #18181a80;
 
     opacity: 0;
     pointer-events: none;
