add fix menu bug

--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -5,6 +5,9 @@
     width: 100%;
     min-height: 233px;
 
+    transform: translateY(-100%);
+    transition: $transition-value-default;
+
     @include small-tablet {
       min-height: 225px;
     }
