--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -11,17 +11,21 @@
     background-color: $green-color;
   }
 
+  // @include small-tablet {
+  //   max-width: 220px;
+  // }
+
   &__list {
     display: flex;
     justify-content: space-between;
-    gap: 20px;
+    gap: 28px;
 
     @include small-tablet {
-      max-width: 220px;
+      max-width: 290px;
     }
 
-    @include phone {
-      max-width: 100%;
+    @include big-phone {
+      justify-content: flex-start;
     }
   }
 
@@ -33,12 +37,19 @@
     justify-content: space-between;
 
     @include nav-heigth;
+
+    @include big-phone {
+      width: auto;
+      box-sizing: border-box;
+      padding-bottom: 3px;
+    }
   }
 
   &__link {
     line-height: 100%;
     display: flex;
     align-items: center;
+
   }
 
   &__link-text {
