--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -1,6 +1,7 @@
 .page {
   font-family: "IBM Plex Sans", Arial, Helvetica, sans-serif;
   background-color: $white-color;
+  scroll-behavior: smooth;
 
   &__body {
     margin: 0;
@@ -14,7 +15,7 @@
       background-color: $black-color;
       opacity: 0;
       pointer-events: none;
-      transition: opacity $transition-value ease;
+      transition: opacity $transition-value-06s ease-out;
     }
   }
 
@@ -27,9 +28,10 @@
     left: 0;
     width: 100%;
     height: 100%;
-    transform: translateY(-101%);
+    transform: translateY(0);
+    pointer-events: none;
 
-    transition: all $transition-value;
+    transition: all $transition-value-default;
 
     @include small-tablet {
       min-height: 225px;
