--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -35,7 +35,7 @@
 @mixin nav-heigth {
   min-height: $nav-heigth;
 
-  @include phone {
+  @include big-phone {
     min-height: $nav-heigth-small;
   }
 }
@@ -43,13 +43,13 @@
 @mixin separator-top {
   top: $header-padding-phone + $nav-heigth;
 
-  @include phone {
+  @include big-phone {
     top: $header-padding-phone + $nav-heigth-small;
   }
 }
 
 @mixin hover($property, $value) {
-  transition: $transition-value;
+  transition: $transition-value-default;
 
   &:hover {
     #{$property}: #{$value};
