--- a/src/styles/blocks/_arrow-link.scss
+++ b/src/styles/blocks/_arrow-link.scss
@@ -7,7 +7,7 @@
   align-items: center;
 
   &__cursor {
-    transition: all $transition-value;
+    transition: all $transition-value-default;
   }
 
   @include big-phone {
