--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -122,7 +122,7 @@
 
     margin-bottom: 18vh;
 
-    transition: all $transition-value;
+    transition: all $transition-value-default;
     overflow: hidden;
 
     @include small-tablet {
