--- a/src/styles/blocks/_icon.scss
+++ b/src/styles/blocks/_icon.scss
@@ -14,6 +14,6 @@
     background-color: $black-color;
     position: absolute;
     top: $position-burger-line;
-    transition: $transition-value;
+    transition: $transition-value-default;
   }
 }
