--- a/src/styles/blocks/_modifiers.scss
+++ b/src/styles/blocks/_modifiers.scss
@@ -25,7 +25,7 @@
     width: $width-burger;
     height: $height-burger-line;
     background-color: $black-color;
-    transition: $transition-value;
+    transition: $transition-value-default;
   }
 
   &::before {
@@ -93,11 +93,15 @@
 }
 
 .page__menu.page__menu--active {
+  pointer-events: all;
+}
+
+.page__menu.page__menu--active .menu__wrapper {
   transform: translateY(0);
 }
 
 .page__body--lock.page__body::before {
-  opacity: 0.4;
+  opacity: 0.5;
   pointer-events: all;
 }
 
