--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,4 +1,5 @@
-$transition-value: 0.3s;
+$transition-value-default: 0.3s;
+$transition-value-06s: 0.6s;
 $white-color: #fff;
 $black-color: #0F0E08;
 $green-color: #1A5A4C;
