--- a/src/styles/blocks/_modifiers.scss
+++ b/src/styles/blocks/_modifiers.scss
@@ -206,3 +206,23 @@
     text-align: center;
   }
 }
+
+.gallery__item--1 {
+  grid-column: 1 / 5;
+}
+
+.gallery__item--2 {
+  grid-column: 5 / -1;
+}
+
+.gallery__item--3 {
+  grid-column: 1 / 9;
+}
+
+.gallery__item--4 {
+  grid-column: 9 / -1;
+}
+
+.gallery__item--swiper {
+  display: none;
+}
