--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -12,9 +12,35 @@
     }
   }
 
+
   &__wrap-images {
     display: grid;
 
     grid-template-columns: repeat(12, 1fr);
+    gap: 30px;
+
+    @include small-tablet {
+      display: none;
+    }
+  }
+
+  &__item:nth-child(-n + 2) {
+    height: 600px;
+  }
+
+  &__item:nth-child(n + 3) {
+    height: 360px;
+  }
+
+  &__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  &__swiper {
+    @media (min-width: 1051px) {
+      display: none;
+    }
   }
 }
