completed swiper, started email block

--- a/src/styles/blocks/_container.scss
+++ b/src/styles/blocks/_container.scss
@@ -6,10 +6,10 @@
   margin-inline: auto;
 
   @include tablet {
-    padding-inline: 34px;
+    padding-inline: $container-padding-tablet;
   }
 
   @include big-phone {
-    padding-inline: 20px;
+    padding-inline: $container-padding-big-phone;
   }
 }
