--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -39,6 +39,12 @@
   }
 
   &__swiper {
+    margin-left: $container-padding-tablet;
+
+    @include big-phone {
+      margin-left: $container-padding-big-phone;
+    }
+
     @media (min-width: 1051px) {
       display: none;
     }
