--- a/src/styles/blocks/_modifiers.scss
+++ b/src/styles/blocks/_modifiers.scss
@@ -78,17 +78,9 @@
   }
 }
 
-.header__link:hover {
-  background-color: rgb(241, 241, 241);
-}
-
-.header__link:active {
-  background-color: rgb(223, 223, 223);
-}
-
 @each $element in $arrow-link-in-elements {
-  .#{$element}:hover .arrow-link .arrow-link__cursor {
-    transform: translate(3px);
+  .#{$element}:hover .arrow-link__cursor {
+    transform: translate(2px);
   }
 }
 
@@ -170,7 +162,6 @@
   }
 }
 
-
 .event__info-top--events-section-gap {
   gap: 28px;
 
@@ -221,4 +212,27 @@
 
 .gallery__item--4 {
   grid-column: 9 / -1;
+}
+
+.swiper-slide {
+  height: 543px !important;
+
+  @include big-phone {
+    height: 410px !important;
+  }
+}
+
+.gallery__image--swiper {
+  object-position: top;
+}
+
+.arrow-link--email {
+  background-color: $orange-color;
+  cursor: pointer;
+
+  @include hover(background-color, #d63819);
+
+  &:active {
+    background-color: #c23316;
+  }
 }
