--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -61,6 +61,14 @@
       margin-top: 183px;
     }
   }
+
+  &__email {
+    margin-top: 200px;
+
+    @include small-tablet {
+      margin-top: 100px;
+    }
+  }
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -79,4 +87,9 @@ a {
 
 p {
   margin: 0;
+}
+
+button {
+  border: 0;
+  padding: 0;
 }
