--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -17,3 +17,5 @@
 @import './blocks/event';
 @import './blocks/landscape';
 @import './blocks/gallery';
+@import './blocks/swiper';
+@import './blocks/email';
