--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,5 +1,7 @@
 $transition-value-default: 0.3s;
 $transition-value-06s: 0.6s;
+$container-padding-tablet: 34px;
+$container-padding-big-phone: 20px;
 $white-color: #fff;
 $black-color: #0F0E08;
 $green-color: #1A5A4C;
@@ -14,7 +16,7 @@ $burger-padding-block: 6px;
 $burger-padding-inline: 3px;
 $position-burger-line: ($height-burger / 2) - ($height-burger-line / 2) + $burger-padding-block;
 $header-top-padding: 9px;
-$arrow-link-in-elements: header__link;
+$arrow-link-in-elements: 'header__link', 'arrow-link--email';
 $header-padding-top: 39px;
 $header-padding-phone: 27px;
 $nav-heigth: 96px;
