--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -122,8 +122,13 @@
 
     margin-bottom: 18vh;
 
-    transition: all $transition-value-default;
     overflow: hidden;
+
+    @include hover(background-color, rgb(241, 241, 241));
+
+    &:active {
+      background-color: rgb(223, 223, 223);
+    }
 
     @include small-tablet {
       margin-bottom: 19px;
