landing page museum

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,30 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import './blocks/header';
+@import 'reset';
+@import './blocks/menu';
+@import './blocks/icons';
+@import './blocks/nav';
+@import './blocks/section-events';
+@import './blocks/cards';
+@import './blocks/lectures';
+@import './blocks/section-gallery';
+@import './blocks/subscribe';
+@import './blocks/footer';
 
 body {
   background: $c-gray;
+  margin: 0;
+
+  font-family: 'IBM Plex Sans', sans-serif;
+  overflow: hidden auto;
+
+  &:has(.aside__menu:target) {
+    overflow: hidden;
+  }
+}
+
+html {
+  scroll-behavior: smooth;
 }
