landing page museum

--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -55,17 +55,25 @@
     }
   }
 
-  &__logo {
-    width: 55px;
-    height: 61px;
+  &__container-logo{
 
     @include on-tablet {
+      display: flex;
+      justify-content: center;
       width: 220px;
     }
 
     @include on-desktop {
       width: 170px;
     }
+
+  }
+
+  &__logo {
+    width: 55px;
+    height: 61px;
+
+
   }
 
   &__title {
