--- a/src/styles/blocks/_arrow-link.scss
+++ b/src/styles/blocks/_arrow-link.scss
@@ -1,10 +1,12 @@
 .arrow-link {
   width: 70px;
-  min-height: 70px;
+  height: 70px;
 
   display: flex;
   justify-content: center;
   align-items: center;
+
+  flex-shrink: 0;
 
   &__cursor {
     transition: all $transition-value-default;
@@ -12,6 +14,6 @@
 
   @include big-phone {
     width: 50px;
-    min-height: 50px;
+    height: 50px;
   }
 }
