--- a/src/styles/blocks/_email.scss
+++ b/src/styles/blocks/_email.scss
@@ -2,12 +2,82 @@
   background-image: url(../images/email-background.png);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
 
   &__content {
     min-height: 550px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     @include small-tablet {
       min-height: 380px;
+    }
+  }
+
+  &__block {
+    max-width: 570px;
+    width: 100%;
+    min-height: 217px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    @include small-tablet {
+      max-width: 460px;
+    }
+
+    @include big-phone {
+      min-height: 210px;
+    }
+  }
+
+  &__text-wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+  }
+
+  &__subtitle {
+    font-weight: 400;
+    font-size: 18px;
+    color: $white-color;
+    text-align: center;
+
+    line-height: 150%;
+  }
+
+  &__form {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__input {
+    border: 0;
+    padding: 0;
+    max-width: 470px;
+    width: 100%;
+    padding-left: 32px;
+    box-sizing: border-box;
+
+    font-family: Montserrat, Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    color: $black-color;
+
+    @include small-tablet {
+      max-width: 374px;
+    }
+
+    @include big-phone {
+      font-size: 14px;
+      padding-left: 24px;
+    }
+
+    &::placeholder {
+      font-size: 14px;
+      color: $grey-text-687;
     }
   }
 }
