--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -93,3 +93,14 @@ button {
   border: 0;
   padding: 0;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:target {
+  -webkit-box-shadow: 0 0 0 1000px #fff inset;
+}
+
+input:focus {
+  outline: 0;
+}
