--- a/src/styles/blocks/_modifiers.scss
+++ b/src/styles/blocks/_modifiers.scss
@@ -240,3 +240,20 @@
 .title--white {
   color: $white-color;
 }
+
+
+.nav__link--footer-setting {
+  color: $black-color;
+  flex-grow: 0;
+  flex-shrink: 0;
+
+  @include hover(color, #5c5c5c)
+}
+
+.nav__column.nav__column--footer {
+  width: auto;
+}
+
+.nav.nav--footer {
+  max-width: 263px;
+}
