making footer adaptive

--- a/src/styles/blocks/_email.scss
+++ b/src/styles/blocks/_email.scss
@@ -10,7 +10,7 @@
     justify-content: center;
     align-items: center;
 
-    @include small-tablet {
+    @include tablet {
       min-height: 380px;
     }
   }
@@ -24,7 +24,7 @@
     flex-direction: column;
     justify-content: space-between;
 
-    @include small-tablet {
+    @include tablet {
       max-width: 460px;
     }
 
@@ -66,7 +66,7 @@
     font-size: 16px;
     color: $black-color;
 
-    @include small-tablet {
+    @include tablet {
       max-width: 374px;
     }
 
