--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -3,7 +3,7 @@
   &__title {
     margin-bottom: 56px;
 
-    @include small-tablet {
+    @include tablet {
       margin-bottom: 48px;
     }
 
@@ -19,7 +19,7 @@
     grid-template-columns: repeat(12, 1fr);
     gap: 30px;
 
-    @include small-tablet {
+    @include tablet {
       display: none;
     }
   }
