--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -9,7 +9,7 @@
     flex-direction: column;
     position: relative;
 
-    @include small-tablet {
+    @include tablet {
       min-height: 384px;
     }
   }
@@ -28,11 +28,11 @@
     justify-content: flex-end;
     padding-right: 30px;
 
-    @include tablet {
+    @include laptop {
       max-width: 420px;
     }
 
-    @include small-tablet {
+    @include tablet {
       max-width: 340px;
       padding-right: 20px;
     }
@@ -68,7 +68,7 @@
     flex-direction: column;
     gap: 13.58vh;
 
-    @include small-tablet {
+    @include tablet {
       gap: 38px;
     }
 
@@ -85,7 +85,7 @@
     font-size: 72px;
     font-weight: 700;
 
-    @include small-tablet {
+    @include tablet {
       font-size: 54px;
     }
 
@@ -103,7 +103,7 @@
   }
 
   &__next-section {
-    @include small-tablet {
+    @include tablet {
       display: none;
     }
   }
@@ -130,7 +130,7 @@
       background-color: rgb(223, 223, 223);
     }
 
-    @include small-tablet {
+    @include tablet {
       margin-bottom: 19px;
     }
 
@@ -160,7 +160,7 @@
     box-sizing: border-box;
     padding-left: 55px;
 
-    @include small-tablet {
+    @include tablet {
       min-height: 384px;
       width: 48.69vw;
       padding-left: 82px;
@@ -184,7 +184,7 @@
       object-fit: cover;
       object-position: bottom;
 
-      @include small-tablet {
+      @include tablet {
         display: none;
       }
     }
