--- a/src/styles/blocks/_info.scss
+++ b/src/styles/blocks/_info.scss
@@ -22,7 +22,7 @@
     align-items: flex-end;
     gap: 38px;
 
-    @include small-tablet {
+    @include tablet {
       gap: 30px;
     }
 
@@ -47,7 +47,7 @@
     width: 170px;
     line-height: 150%;
 
-    @include small-tablet {
+    @include tablet {
       width: 140px;
     }
   }
