--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -24,3 +24,4 @@ $nav-heigth-small: 72px;
 $separator-top: $nav-heigth-small + $header-padding-phone;
 $landscape-block-height: 204px;
 $landscape-block-bottom: $landscape-block-height / 2;
+$footer-titles-gap: 20px;
