--- a/src/styles/blocks/_container.scss
+++ b/src/styles/blocks/_container.scss
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   margin-inline: auto;
 
-  @include tablet {
+  @include laptop {
     padding-inline: $container-padding-tablet;
   }
 
