--- a/src/styles/blocks/_events-section.scss
+++ b/src/styles/blocks/_events-section.scss
@@ -3,7 +3,7 @@
   &__title {
     margin-bottom: 56px;
 
-    @include small-tablet {
+    @include tablet {
       margin-bottom: 48px;
     }
 
@@ -20,7 +20,7 @@
 
     padding-bottom: 104px;
 
-    @include small-tablet {
+    @include tablet {
       flex-direction: column;
       align-items: flex-start;
 
@@ -48,7 +48,7 @@
     max-width: 670px;
     height: 520px;
 
-    @include small-tablet {
+    @include tablet {
       max-width: 100%;
       width: 100%;
     }
