--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -1,3 +1,125 @@
 .footer {
-  display: block;
+  &__block-top {
+    max-width: 964px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    gap: 15px;
+
+    @include small-tablet {
+      flex-direction: column;
+      gap: 129px;
+    }
+
+    @include big-phone {
+      gap: 111px;
+    }
+  }
+
+  &__wrapper-information {
+    max-width: 577px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    @include small-tablet {
+      max-width: 550px;
+      gap: 15px;
+    }
+  }
+
+  &__logo-social {
+    display: flex;
+    flex-direction: column;
+    align-self: flex-start;
+    gap: 62px;
+  }
+
+  &__social {
+    display: flex;
+    justify-content: space-between;
+
+    @include small-tablet {
+      gap: 32px;
+    }
+  }
+
+  &__info {
+    max-width: 373px;
+    width: 100%;
+    display: flex;
+    gap: 30px;
+    position: relative;
+
+    @include small-tablet {
+      &::before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 1px;
+        background-color: $green-color;
+        opacity: 0.5;
+        bottom: -64px;
+      }
+
+      max-width: 437px;
+
+    }
+  }
+
+  &__contacts {
+    display: flex;
+    flex-direction: column;
+    gap: $footer-titles-gap;
+  }
+
+  &__contacts-title {
+    font-size: 14px;
+    font-weight: 400;
+  }
+
+  &__information {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 150%;
+    color: $black-color;
+  }
+
+  &__information-link {
+    color: $black-color;
+  }
+
+  &__separator {
+    width: 1px;
+    height: 260px;
+    background-color: $green-color;
+    opacity: 0.5;
+
+    @include small-tablet {
+      display: none;
+    }
+  }
+
+  &__copyright {
+    margin-top: 87px;
+
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    @include tablet {
+      margin-top: 120px;
+    }
+
+    @include phone {
+      margin-top: 80px;
+    }
+  }
+
+  &__copyright-text {
+    font-size: 12px;
+    font-weight: 300;
+    color: $black-color;
+  }
 }
