--- a/src/styles/blocks/_landscape.scss
+++ b/src/styles/blocks/_landscape.scss
@@ -7,7 +7,7 @@
   background-size: cover;
   background-position: center;
 
-  @include small-tablet {
+  @include tablet {
     background-image: none;
   }
 
@@ -21,7 +21,7 @@
     justify-content: center;
     align-items: flex-end;
 
-    @include small-tablet {
+    @include tablet {
       background-image: url(../images/landscape-background.png);
       background-repeat: no-repeat;
       background-size: cover;
