--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -8,7 +8,7 @@
     transform: translateY(-100%);
     transition: $transition-value-default;
 
-    @include small-tablet {
+    @include tablet {
       min-height: 225px;
     }
   }
@@ -20,7 +20,7 @@
     gap: 38px;
 
 
-    @include small-tablet {
+    @include tablet {
       gap: 30px;
     }
 
