--- a/src/styles/blocks/_modifiers.scss
+++ b/src/styles/blocks/_modifiers.scss
@@ -119,7 +119,7 @@
 
   @include hover(color, $grey-hover);
 
-  @include small-tablet {
+  @include tablet {
     font-size: 16px;
   }
 }
@@ -127,7 +127,7 @@
 .nav__list--margin-left {
   margin-left: 102px;
 
-  @include small-tablet {
+  @include tablet {
     margin-left: 57px;
   }
 
@@ -139,7 +139,7 @@
 .nav__item--height {
   height: 44px;
 
-  @include small-tablet {
+  @include tablet {
     height: 32px;
   }
 }
@@ -246,6 +246,7 @@
   color: $black-color;
   flex-grow: 0;
   flex-shrink: 0;
+  font-size: 14px;
 
   @include hover(color, #5c5c5c)
 }
@@ -256,4 +257,68 @@
 
 .nav.nav--footer {
   max-width: 263px;
+
+  @include small-tablet {
+    background-color: inherit;
+    margin-left: 115px;
+    position: static;
+  }
+
+}
+
+.nav__list.nav__list--footer {
+  max-width: 300px;
+
+  @include big-phone {
+    background-color: inherit;
+  }
+}
+
+.info.info--footer {
+  max-width: none;
+  width: auto;
+
+  flex-shrink: 0;
+  flex-grow: 0;
+  gap: $footer-titles-gap;
+
+  @include small-tablet {
+    max-width: 220px;
+    width: 100%;
+  }
+}
+
+.info__title--footer {
+  color: $black-color;
+}
+
+.info__bottom-wrap.info__bottom-wrap--footer {
+  color: $black-color;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 30px;
+}
+
+.info__weekends-text--tablet-disabled {
+  @include small-tablet {
+    display: none;
+  }
+}
+
+.info__weekends-text--on-tablet {
+  display: none;
+
+  @include small-tablet {
+    display: block;
+  }
+}
+
+.info__chart-item--footer {
+  text-wrap: wrap;
+}
+
+.info__weekends.info__weekends--footer {
+  @include small-tablet {
+    width: auto;
+  }
 }
