--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -16,7 +16,7 @@
     justify-content: space-between;
     gap: 28px;
 
-    @include small-tablet {
+    @include tablet {
       max-width: 220px;
     }
 
