--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,14 +4,20 @@
   }
 }
 
-@mixin tablet {
+@mixin laptop {
   @media (max-width: 1280px) {
     @content;
   }
 }
 
-@mixin small-tablet {
+@mixin tablet {
   @media (max-width: 1050px) {
+    @content;
+  }
+}
+
+@mixin small-tablet {
+  @media (max-width: 820px) {
     @content;
   }
 }
@@ -55,4 +61,3 @@
     #{$property}: #{$value};
   }
 }
-
