--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -2,3 +2,90 @@
   font-family: Roboto, sans-serif;
   font-weight: 400;
 }
+
+.name {
+  display: flex;
+  align-items: center;
+  font-family: $font-montserrat;
+  font-size: 28px;
+  line-height: 28px;
+  color: $color-black;
+  gap: 10px;
+}
+
+.exhibion {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-family: $font-ibm-plex-sans;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 16px;
+  color: $color-gray;
+  text-transform: uppercase;
+
+  @include on-tablet {
+    font-size: 14px;
+  }
+}
+
+.title {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  font-family: $font-montserrat;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 36px;
+
+  @include on-tablet {
+    font-size: 48px;
+    line-height: 48px;
+  }
+}
+
+a {
+  text-decoration: none;
+  font-family: $font-ibm-plex-sans;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.information {
+  font-family: $font-ibm-plex-sans;
+  font-weight: 400;
+  line-height: 19.69px;
+  display: flex;
+  flex-direction: column;
+}
+
+.navigation {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.about {
+  padding: 40px 0;
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.img {
+  transition: transform $effectDuration ease;
+  cursor: pointer;
+
+  &:hover {
+    transform: $FotoTransform;
+  }
+}
+
+.nav {
+  transition: transform $effectDuration ease;
+  cursor: pointer;
+
+  &:hover {
+    transform: $NavTransform;
+  }
+}
