Create component: header

--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,14 @@
-%h1 {
-  font-family: Roboto, sans-serif;
-  font-weight: 400;
+%flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+%flex-center {
+  display: flex;
+  justify-content: center;
+}
+
+%flex-end {
+  display: flex;
+  justify-content: end;
 }
