--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,13 @@
-$c-gray: #eee;
+$big-tablet-min-width: 1024px;
+$tablet-min-width: 700px;
+$desktop-min-width: 1280px;
+$primary-font: 'Montserrat', sans-serif;
+$secondary-font: 'IBM Plex Sans', sans-serif;
+$font-size-sm: 14px;
+$font-size-md: 16px;
+$white: #fff;
+$black: #000;
+$primary-color: #1a5a4c;
+$main-text-color: #0f0e08;
+$secondary-text-color: #4e4e4e;
+$transition-duration: 0.5s;
