--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,41 @@
 @import 'utils';
 @import 'fonts';
-@import 'typography';
+@import 'components/header';
+@import 'components/menu';
+@import 'components/hero';
+@import 'components/button';
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: $primary-font;
+  font-weight: 600;
+}
 
 body {
-  background: $c-gray;
+  overflow-x: hidden;
+  position: relative;
+}
+
+main {
+  position: absolute;
+  top: 0;
+
+  @include on-tablet {
+    width: 100%;
+  }
+}
+
+.inactive {
+  display: block;
+  height: 100vh;
+  background: gray;
+  transition: all 0.5s;
+  pointer-events: all;
+  opacity: 0.5;
+}
+
+.lock-scroll {
+  overflow: hidden;
 }
