--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -24,6 +24,14 @@
     }
   }
 
+  &__item {
+    @include hover(transform, scale(1.03));
+
+    @include tablet {
+      @include hover(transform, none);
+    }
+  }
+
   &__item:nth-child(-n + 2) {
     height: 600px;
   }
