--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -103,6 +103,8 @@
   }
 
   &__next-section {
+    @include hover(box-shadow, 0 0 10px rgba(26, 90, 76, 0.2));
+
     @include tablet {
       display: none;
     }
