--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -25,3 +25,5 @@ $separator-top: $nav-heigth-small + $header-padding-phone;
 $landscape-block-height: 204px;
 $landscape-block-bottom: $landscape-block-height / 2;
 $footer-titles-gap: 20px;
+$footer-link-up-height: 50px;
+$footer-link-up-position: 0 - $footer-link-up-height;
