--- a/src/styles/blocks/_modifiers.scss
+++ b/src/styles/blocks/_modifiers.scss
@@ -35,6 +35,11 @@
   &::after {
     bottom: $burger-padding-block;
   }
+
+  &:hover::before,
+  &:hover::after{
+    background-color: $grey-hover;
+  }
 }
 
 .icon--burger.icon--active {
@@ -52,6 +57,10 @@
 
 .icon--active .icon__line {
   transform: scale(0);
+}
+
+.icon--burger:hover .icon__line {
+  background-color: $grey-hover;
 }
 
 .arrow-link--green {
@@ -248,7 +257,11 @@
   flex-shrink: 0;
   font-size: 14px;
 
-  @include hover(color, #5c5c5c)
+  @include hover(color, $orange-color);
+}
+
+.nav__link-text.nav__link-text--footer {
+  font-weight: 400;
 }
 
 .nav__column.nav__column--footer {
@@ -264,6 +277,9 @@
     position: static;
   }
 
+  @include big-phone {
+    margin-left: 0;
+  }
 }
 
 .nav__list.nav__list--footer {
@@ -275,7 +291,8 @@
 }
 
 .info.info--footer {
-  max-width: none;
+  max-width: 187px;
+
   width: auto;
 
   flex-shrink: 0;
@@ -283,8 +300,9 @@
   gap: $footer-titles-gap;
 
   @include small-tablet {
-    max-width: 220px;
+    max-width: 187px;
     width: 100%;
+    flex-shrink: 1;
   }
 }
 
@@ -313,12 +331,13 @@
   }
 }
 
-.info__chart-item--footer {
+.info__chart-item.info__chart-item--footer {
   text-wrap: wrap;
 }
 
 .info__weekends.info__weekends--footer {
   @include small-tablet {
-    width: auto;
+    max-width: 187px;
+    width: 100%;
   }
 }
