--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -3,18 +3,20 @@ $transition-value-06s: 0.6s;
 $container-padding-tablet: 34px;
 $container-padding-big-phone: 20px;
 $white-color: #fff;
-$black-color: #0F0E08;
-$green-color: #1A5A4C;
+$black-color: #0f0e08;
+$green-color: #1a5a4c;
 $grey-hover: #999;
 $grey-text-687: #687480;
-$grey-text-4E4: #4E4E4E;
-$orange-color: #F14A27;
+$grey-text-4E4: #4e4e4e;
+$orange-color: #f14a27;
 $height-burger: 12px;
 $width-burger: 18px;
 $height-burger-line: 2px;
 $burger-padding-block: 6px;
 $burger-padding-inline: 3px;
-$position-burger-line: ($height-burger / 2) - ($height-burger-line / 2) + $burger-padding-block;
+$position-burger-line: (
+  ($height-burger / 2) - ($height-burger-line / 2) + $burger-padding-block
+);
 $header-top-padding: 9px;
 $arrow-link-in-elements: 'header__link', 'arrow-link--email';
 $header-padding-top: 39px;
