--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -1,5 +1,5 @@
 .page {
-  font-family: "IBM Plex Sans", Arial, Helvetica, sans-serif;
+  font-family: 'IBM Plex Sans', Arial, Helvetica, sans-serif;
   background-color: $white-color;
   scroll-behavior: smooth;
 
@@ -18,7 +18,6 @@
       transition: opacity $transition-value-06s ease-out;
     }
   }
-
 
   &__menu {
     overflow-y: auto;
@@ -80,11 +79,17 @@
   }
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
 }
 
-ul, ol {
+ul,
+ol {
   list-style-type: none;
   margin: 0;
   padding: 0;
