fixed some code

--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -14,9 +14,7 @@ $width-burger: 18px;
 $height-burger-line: 2px;
 $burger-padding-block: 6px;
 $burger-padding-inline: 3px;
-$position-burger-line: (
-  ($height-burger / 2) - ($height-burger-line / 2) + $burger-padding-block
-);
+$position-burger-line: (($height-burger / 2) - ($height-burger-line / 2) + $burger-padding-block);
 $header-top-padding: 9px;
 $arrow-link-in-elements: 'header__link', 'arrow-link--email';
 $header-padding-top: 39px;
