Create component: events

--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -1,6 +1,8 @@
 .hero {
   @extend %flex-column;
 
+  padding-bottom: 35px;
+
   &__bg {
     background-image: url('../images/banner/banner-bg-mobile.webp'),
       url('../images/banner/banner-bg-mobile.avif');
@@ -60,7 +62,6 @@
 
   &__title {
     font-family: $primary-font;
-    font-style: normal;
     font-weight: 700;
     font-size: clamp(45px, 5.4vw, 72px);
     line-height: 100%;
