--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 @import 'components/menu';
 @import 'components/hero';
 @import 'components/button';
+@import 'components/events';
 
 * {
   margin: 0;
@@ -11,6 +12,7 @@
   box-sizing: border-box;
   font-family: $primary-font;
   font-weight: 600;
+  scroll-behavior: smooth;
 }
 
 body {
