--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -10,4 +10,5 @@ $black: #000;
 $primary-color: #1a5a4c;
 $main-text-color: #0f0e08;
 $secondary-text-color: #4e4e4e;
+$active-color: #f14a27;
 $transition-duration: 0.5s;
