--- a/src/styles/components/events.scss
+++ b/src/styles/components/events.scss
@@ -1,5 +1,5 @@
 .events {
-  padding: 35px 0 50px;
+  padding: 35px 0 150px;
 
   &__content {
     @extend %flex-column;
@@ -119,5 +119,85 @@
     font-size: $font-size-md;
     line-height: 150%;
     color: $secondary-text-color;
+  }
+
+  .lecture {
+    width: 100%;
+    height: 210px;
+    position: relative;
+    background-image: url('../images/events/lecture.avif'),
+      url('../images/events/lecture.webp'), url('../images/events/lecture.jpg');
+
+    @extend %background-cover;
+
+    &__info {
+      position: absolute;
+      top: 100%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      background-color: $white;
+      padding: 20px 0;
+      border-bottom: 2px solid #c5d5d2;
+      width: 80%;
+
+      @media screen and (min-width: 1024px) {
+        max-width: 570px;
+      }
+    }
+
+    &__info-date {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      max-width: 370px;
+      margin: 0 auto 20px;
+    }
+
+    &__info-text {
+      font-family: $secondary-font;
+      font-weight: 500;
+      font-size: $font-size-md;
+      line-height: 100%;
+      text-transform: uppercase;
+
+      color: #687480;
+    }
+
+    &__info-subtitle {
+      font-family: $secondary-font;
+      font-weight: 700;
+      font-size: $font-size-md;
+      line-height: 150%;
+      color: $primary-color;
+    }
+
+    &__info-title {
+      font-family: $primary-font;
+      font-weight: 400;
+      font-size: clamp(18px, 5vw, 36px);
+      line-height: 100%;
+      text-align: center;
+      max-width: 370px;
+      margin: 0 auto;
+      color: #0f0e08;
+    }
+
+    @media screen and (min-width: 480px) {
+      height: 300px;
+    }
+
+    @media screen and (min-width: 600px) {
+      height: 350px;
+    }
+
+    @media screen and (min-width: 1024px) {
+      height: 400px;
+    }
+
+    @media screen and (min-width: 1280px) {
+      background-position: bottom;
+      height: 550px;
+    }
   }
 }
