--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -12,3 +12,9 @@
   display: flex;
   justify-content: end;
 }
+
+%background-cover {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
