--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -8,7 +8,8 @@
     height: 60vh;
     z-index: 1;
     background-image: url('../images/banner/banner-bg-mobile.avif'),
-      url('../images/banner/banner-bg-mobile.webp');
+      url('../images/banner/banner-bg-mobile.webp'),
+      url('../images/banner/banner-bg-mobile.jpg');
 
     @extend %background-cover;
 
@@ -16,7 +17,7 @@
       height: 500px;
       background-image: url('../images/banner/banner-bg.avif'),
         url('../images/banner/banner-bg.webp'),
-        url('../images/banner/banner-bg.jpeg');
+        url('../images/banner/banner-bg.jpg');
     }
 
     @include on-desktop {
