fixed hover in burger, fixed position of landscape block

--- a/src/styles/blocks/_modifiers.scss
+++ b/src/styles/blocks/_modifiers.scss
@@ -39,6 +39,10 @@
   &:hover::before,
   &:hover::after {
     background-color: $grey-hover;
+
+    @include small-tablet {
+      background-color: $burger-padding-block;
+    }
   }
 }
 
@@ -61,6 +65,10 @@
 
 .icon--burger:hover .icon__line {
   background-color: $grey-hover;
+
+  @include small-tablet {
+    background-color: $burger-padding-block;
+  }
 }
 
 .arrow-link--green {
