--- a/src/styles/blocks/_landscape.scss
+++ b/src/styles/blocks/_landscape.scss
@@ -12,6 +12,7 @@
   }
 
   @include big-phone {
+    position: static;
     background-image: url(../images/landscape-background.png);
   }
 
@@ -50,6 +51,10 @@
     justify-content: center;
     background-color: $white-color;
     transform: translateY(50%);
+
+    @include big-phone {
+      position: static;
+    }
 
     @include phone {
       min-height: 140px;
