Create component: gallery

--- a/src/styles/components/menu.scss
+++ b/src/styles/components/menu.scss
@@ -40,6 +40,9 @@
     top: 0;
     left: 0;
     display: inline-block;
+    border-radius: 50%;
+
+    @include hover(background, $active-color);
   }
 
   &__close-img {
@@ -73,7 +76,7 @@
   &__list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 25px 50px;
+    gap: 25px 32px;
 
     @media screen and (min-width: 400px) {
       column-gap: 70px;
@@ -81,10 +84,18 @@
   }
 
   &__item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     list-style: none;
+    text-align: center;
+    border-radius: 20px;
+
+    @include hover(background, $active-color);
   }
 
   &__link {
+    padding: 10px;
     font-family: $secondary-font;
     font-weight: 500;
     line-height: 100%;
