--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 @import 'components/hero';
 @import 'components/button';
 @import 'components/events';
+@import 'components/gallery';
 
 * {
   margin: 0;
@@ -21,12 +22,7 @@ body {
 }
 
 main {
-  position: absolute;
-  top: 0;
-
-  @include on-tablet {
-    width: 100%;
-  }
+  margin-top: -70px;
 }
 
 .inactive {
@@ -39,5 +35,9 @@ main {
 }
 
 .lock-scroll {
-  overflow: hidden;
+  overflow-y: scroll;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
 }
