--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -7,6 +7,10 @@
     position: relative;
     z-index: 2;
     display: inline-block;
+    padding: 2px;
+    border-radius: 50%;
+
+    @include hover(background, $active-color);
   }
 
   &__logo-img {
