Create component: contact-us

--- a/src/styles/components/gallery.scss
+++ b/src/styles/components/gallery.scss
@@ -1,6 +1,6 @@
 .gallery {
   position: relative;
-  padding-top: 100px;
+  padding: 85px 0;
 
   &__title {
     font-family: $primary-font;
@@ -80,13 +80,13 @@
     }
 
     .swiper-slide:nth-child(3) {
-      height: 300px !important;
+      height: 410px !important;
       width: calc(70% - 10px) !important;
     }
 
     .swiper-slide:nth-child(4) {
       width: calc(30% - 10px) !important;
-      height: 300px !important;
+      height: 410px !important;
     }
   }
 
