--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@
 @import 'components/button';
 @import 'components/events';
 @import 'components/gallery';
+@import 'components/contacts';
 
 * {
   margin: 0;
