Create component: footer

--- a/src/styles/components/menu.scss
+++ b/src/styles/components/menu.scss
@@ -89,9 +89,6 @@
     justify-content: center;
     list-style: none;
     text-align: center;
-    border-radius: 20px;
-
-    @include hover(background, $active-color);
   }
 
   &__link {
@@ -101,6 +98,9 @@
     line-height: 100%;
     text-decoration: none;
     color: inherit;
+    border-radius: 20px;
+
+    @include hover(background, $active-color);
   }
 
   &__schedule {
@@ -121,6 +121,12 @@
       text-align: left;
       width: 100%;
     }
+  }
+
+  hr {
+    background-color: $white;
+    height: 1px;
+    border: none;
   }
 
   &__schedule-title {
