--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,7 @@
 @import 'components/events';
 @import 'components/gallery';
 @import 'components/contacts';
+@import 'components/footer';
 
 * {
   margin: 0;
@@ -41,4 +42,22 @@ main {
   left: 0;
   right: 0;
   top: 0;
+}
+
+.scroll-to-top {
+  display: none; /* Скрываем кнопку по умолчанию */
+  z-index: 20;
+  position: fixed;
+  width: 50px;
+  height: 50px;
+  bottom: 40px;
+  right: 20px;
+  padding: 10px;
+  background-color: $white;
+  color: $primary-color;
+  border: 1px solid $primary-color;
+  border-radius: 50%;
+  cursor: pointer;
+
+  @include hover(background-color, $active-color);
 }
