--- a/src/styles/components/gallery.scss
+++ b/src/styles/components/gallery.scss
@@ -49,6 +49,14 @@
     max-height: 600px;
     object-fit: cover;
     object-position: center;
+
+    @media screen and (min-width: 1024px) {
+      transition: transform $transition-duration ease;
+
+      &:hover {
+        transform: scale(1.2);
+      }
+    }
   }
 
   @media screen and (min-width: 1024px) {
@@ -69,6 +77,7 @@
     .swiper-slide {
       width: 100% !important;
       height: 600px !important;
+      overflow: hidden;
     }
 
     .swiper-slide:nth-child(1) {
